--- a/server/py/Novel_Emotion_Detection.ipynb
+++ b/server/py/Novel_Emotion_Detection.ipynb
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "ncfX_2yY_-0O"
       },
@@ -53,7 +53,7 @@
         "# Download NLTK resources if not already downloaded\n",
         "nltk.download('vader_lexicon')\n",
         "# Read the dataset text file\n",
-        "file_path = './content/Little-Prince-Antoine-De-Saint-Exupéry-Z-Library.txt'\n",
+        "file_path = './content/The-House-at-Pooh-Corner-Pooh-Original-Edition-A.-A.-Milne-Z-Library.txt'\n",
         "with open(file_path, 'r',encoding='utf-8') as file:\n",
         "    data = file.read()"
       ]
